# jg-diag

./: CMakeLists.txt  README.md
src/: jg_coordinates.h  jg_svg_writer.h  jg_xml_writer.h  main.cpp
